Fix logo alignment

--- a/indico_themes_canonical/static/css/_default/header.css
+++ b/indico_themes_canonical/static/css/_default/header.css
@@ -62,6 +62,7 @@ Event Logo placement
   position: absolute;
   right: 60px;
   max-height: 12.5rem;
+  top: -1rem;
 }
 
 /*
